# distributed-ai-dev

./: .env  .env.template  .gitignore  CLUSTER_INFO.md  COMMUNITY_INTEGRATION.md  DEPLOYMENT_INSTRUCTIONS.md  LICENSE  RDNA4_Optimization_Plan.md  README.md  TODOS.md  agent_113_rdna4_workload.py  install.sh  requirements.txt  setup-monitoring.sh  setup_rocm_dev.sh
config/: agents.yaml  agents.yaml.template
config/auto-agent-analysis/: agent_113_summary.md  agent_27_summary.md
docs/: daily-contribution-plan.md  development-workflow.md  distributed-ai-dev-system.md  rocm-planning.md  setup_guide.md
examples/: agent_workload.py
orchestration/: agent_113_config.py  agent_113_model_recommendation.json  ai_dev_coordinator.py  claude_interface.py
orchestration/results/: agent_27_test_20250618_180546.json  (+10 more)
reports/: ROCm_SD_Performance_Report.html  ROCm_SD_Performance_Report_ASCII.md  ROCm_SD_Performance_Report_Clean.md  ROCm_SD_Performance_Report_clean.md  ROCm_SD_Performance_Report_fixed.md  ROCm_SD_Performance_Report_formatted.html  ROCm_SD_Summary.md  agent_27_assessment.md  agent_coordination_report.md  generate_pdf_report.py  minimal_template.latex  simple_template.latex  system_overview.md
src/: __init__.py
src/kernels/: CMakeLists.txt  attention_optimization.hip  attention_optimization_simplified.hip  memory_optimization.hip  rdna4_fp8_attention.hip  rdna4_vae_optimization.hip  test_kernels.cpp  test_kernels_simple.cpp
tests/: quick_agent_integration.py  test_agent_113.py  test_agent_27_simple.py  test_distributed_system.py  test_unified_pipeline.py
(+29 files in other folders)
